# annoyance2

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
firmware/: Cargo.toml  build.rs
firmware/src/: adc.rs  collections.rs  config.rs  control.rs  fft.rs  hal.rs  indicator.rs  main.rs  math.rs  panic.rs  pulse.rs  time.rs
firmware/src/config/: debug.rs
firmware/src/fft/: analysis.rs  equalizer.rs  imp.rs  window.rs
firmware/src/hal/: tim.rs
schematic/: .gitignore  Custom_Symbols.kicad_sym  annoyance2.kicad_pcb  annoyance2.kicad_prl  annoyance2.kicad_pro  annoyance2.kicad_sch  annoyance2.kicad_sch-bak
schematic/Custom_Footprints.pretty/: BAT_BH123A.kicad_mod  CUI_MJ-63022B.kicad_mod  IF-E96E.kicad_mod  TRIM_PT01-D125D-B102.kicad_mod  TRIM_PT01-D125D-B103.kicad_mod  TRIM_PT01-D130D-A102.kicad_mod  TRIM_PT01-D130D-A103.kicad_mod  YAAJ_BluePill_1.kicad_mod
schematic/Custom_Silkscreen.pretty/: Annoying_Dog_sprite_1.kicad_mod  Annoying_Dog_sprite_2.kicad_mod  Annoying_Dog_sprite_bone.kicad_mod  Annoying_Dog_sprite_dogcheck.kicad_mod  readme.txt
testsuite/: Cargo.toml
testsuite/src/: lib.rs
testsuite/tests/: test.rs
visualizer/: Cargo.toml
visualizer/benches/: parse.rs  parse.txt
visualizer/src/: config.rs  defer.rs  lib.rs  main.rs  parse.rs  state.rs  terminal.rs
