[package]
authors = ["Erik Desjardins <erikdesjardins@users.noreply.github.com>"]
name = "annoyance2"
edition = "2021"
version = "0.0.0"

[workspace]
members = ["testsuite"]

[dependencies]
cordic = "0.1"
cortex-m = "0.7"
cortex-m-rtic = "1"
defmt = "0.3"
defmt-rtt = "0.3"
dwt-systick-monotonic = "1"
embedded-hal = "0.2"
fixed = "1"
fixed-sqrt = "0.2"
fugit = "0.3"
num-complex = { version = "0.4", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
stm32f1xx-hal = { version = "0.9", features = ["stm32f103", "medium", "rtic"] }

[profile.dev]
codegen-units = 1
debug = 2
incremental = false
opt-level = "s"

[profile.test]
codegen-units = 1
debug = 2
incremental = false
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
incremental = false
lto = 'fat'
opt-level = "s"

[profile.bench]
codegen-units = 1
debug = 2
incremental = false
lto = 'fat'
opt-level = "s"
